<resources>
    <string name="app_name">PopShows</string>

    <string name="toast_list_cache_cleared">Successfully cleared list cache!</string>
    <string name="toast_history_cleared">Successfully search history!</string>
    <string name="toast_logged_out">Logged out successfully</string>
    <string name="toast_added_to_list">Added to %s</string>
    <string name="toast_moved_to_list">Moved to %s</string>
    <string name="toast_unknown_error">Something went wrong. Please try again.</string>
    <string name="toast_restored">Restored item successfully</string>

    <string name="snackbar_deleted_list">Successfully deleted a list</string>
    <string name="snackbar_undo">Undo</string>

    <string name="dialog_edit">Edit</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="title_my_account">My Account</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">Series</string>
    <string name="title_anime">Anime</string>
    <string name="title_lists">My Lists</string>
    <string name="title_favourites">My Favourites</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About &amp; Credits</string>
    <string name="title_watchlists">My lists</string>

    <string name="title_menu_add_to_list">Add to list</string>
    <string name="title_menu_add_to_favourites">Add to favourites</string>
    <string name="title_menu_share">Share</string>

    <string name="title_search">Search</string>

    <string name="search_hint_movies">Search movies, series and actors</string>
    <string name="search">Search</string>
    <string name="search_hint_anime">Search anime</string>

    <string name="navdrawer_open">Open navigation drawer</string>
    <string name="navdrawer_close">Close navigation drawer</string>
    <string name="text_add_account">Add an account</string>

    <string name="pref_category_discovery">Discovery settings</string>
    <string name="pref_category_account">Account settings</string>
    <string name="pref_homepage_title">Homepage</string>
    <string name="pref_category_datausage">Data usage</string>
    <string name="pref_usemobnetwork_title">Use mobile network</string>
    <string name="pref_category_storage">Storage Settings</string>
    <string name="pref_syncdelay_title">List update delay</string>

    <string-array name="pref_homepage_entries">
        <item>Movies</item>
        <item>Series</item>
        <item>Anime</item>
    </string-array>
    <string-array name="pref_homepage_entryvalues">
        <item>8</item>
        <item>11</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_syncdelay_entries">
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
        <item>6 Hours</item>
        <item>8 Hours</item>
        <item>12 Hours</item>
        <item>24 Hours</item>
    </string-array>
    <string-array name="pref_syncdelay_entryvalues">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string-array name="movie_tabs">
        <item>Popular</item>
        <item>Newest</item>
        <item>Top rated</item>
        <item>Upcoming</item>
    </string-array>

    <string-array name="serie_tabs">
        <item>Popular</item>
        <item>Airing Today</item>
        <item>On Air</item>
        <item>Top Rated</item>
    </string-array>

    <string-array name="anime_tabs">
        <item>Top Airing</item>
        <item>Just Added</item>
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Upcoming</item>
    </string-array>

    <string-array name="category_movie_tabs">
        <item>Popular</item>
        <item>Top rated</item>
        <item>Newest</item>
    </string-array>

    <string-array name="category_serie_tabs">
        <item>Popular</item>
        <item>Top rated</item>
    </string-array>

    <string-array name="category_anime_tabs">
        <item>Popular</item>
        <item>Top rated</item>
        <item>Top Airing</item>
        <item>Just Added</item>
        <item>Upcoming</item>
    </string-array>

    <string name="cast">Cast</string>
    <string name="similar">Similar</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="staff">Staff</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="actor_in_movies">Actor in movies</string>
    <string name="actor_in_series">Actor in series</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_username_password">Incorrect username or password. Please try again.</string>
    <string name="error_server">An error occurred. Please try again later.</string>
    <string name="error_server_timeout">Could not reach the server. Please try again later.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_network">Cannot connect to the network.</string>
    <string name="fullname">Full name</string>
    <string name="password">Password</string>
    <string name="title_continue">Continue</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>


    <string name="title_delete">Delete</string>
    <string name="title_edit">Edit</string>
    <string name="title_add">Add</string>
    <string name="title_move">Move</string>
    <string name="title_create_list">Create list</string>
    <string name="title_edit_list">Edit list</string>
    <string name="title_create_new_list">Create a new list</string>
    <string name="title_addto_list">Add to list</string>
    <string name="title_moveto_list">Move to list</string>
    <string name="about">About</string>
    <string name="about_content">This app is made by Egor Dmitriev. To know more about me vitit my website http://egordmitriev.net/</string>
    <string name="credits">Credits</string>
    <string name="tmdb">TMDB - https://www.themoviedb.org/</string>
    <string name="tmdb_credit">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="anilist_content">This app uses data from Anilist to provide information in anime section.</string>
    <string name="anilist">Anilist - https://anilist.co</string>
    <string name="freepik">Freepik - http://www.freepik.com/free-photos-vectors/design</string>
    <string name="freepik_content">The logo this app uses is designed and created by Freepik.</string>
</resources>
