<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_movies"
        android:checkable="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movies"/>
    <item
        android:id="@+id/nav_series"
        android:checkable="true"
        android:icon="@drawable/ic_tv"
        android:title="@string/title_series"/>
    <item
        android:id="@+id/nav_anime"
        android:checkable="true"
        android:icon="@drawable/ic_anime"
        android:title="@string/title_anime"/>

    <item android:title="@string/title_my_account">
        <menu>
            <item
                android:id="@+id/nav_lists"
                android:checkable="true"
                android:icon="@drawable/ic_lists"
                android:title="@string/title_lists"/>
            <item
                android:id="@+id/nav_favourites"
                android:checkable="true"
                android:icon="@drawable/ic_favourite"
                android:title="@string/title_favourites"/>
<!--            <item
                android:id="@+id/nav_friends"
                android:checkable="true"
                android:icon="@drawable/ic_friends"
                android:title="@string/title_friends"/>-->
<!--            <item
                android:id="@+id/nav_profile"
                android:checkable="true"
                android:icon="@drawable/ic_profile"
                android:title="@string/title_profile"/>-->
            <item
                android:id="@+id/nav_settings"
                android:checkable="true"
                android:icon="@drawable/ic_settings"
                android:title="@string/title_settings"/>
            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_information"
                android:title="@string/title_about"/>
        </menu>
    </item>
</menu>