<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/view_signup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/spacing_large"
    android:paddingRight="@dimen/spacing_large"
    android:paddingTop="@dimen/spacing_large">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fullname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname_layout"
        android:layout_marginTop="@dimen/spacing_large">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:layout_marginTop="@dimen/spacing_large">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionId="@+id/login_action"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        style="@style/AppTheme.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnForgotPassword"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:height="58dp"
        android:text="@string/register"
        android:textStyle="bold"/>

<!--    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnForgotPassword"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:textAllCaps="false"
        android:textColor="@color/lighten_3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>-->

</RelativeLayout>